<resources>
    <string name="app_name">DCEdu Classroom</string>
    <string name="txtVerifyPhone">Vui lòng nhập mã xác minh được gửi tới %s để tiếp tục.</string>
    <string name="txtRequest"><b><u>Gửi lại yêu cầu</u></b></string>
    <string name="txtSendCode">Chúng tôi sẽ gửi một tin nhắn kèm mã xác minh tới số điện thoại.</string>
    <string name="errorFirebase">Kiểm tra kết nối và thử lại!</string>
    <string name="logout">Đăng xuất</string>
    <string name="code">Mã lớp: %s</string>
    <string name="numMember">Tổng thành viên: %d</string>
    <string name="noticeClass">Bạn chưa có lớp nào.\nHãy tạo lớp mới hoặc tìm lớp.</string>
    <string name="noticeTask">Không có bài tập nào.</string>
    <string name="nameTask">Tên bài tập</string>
    <string name="timeTask">Thời gian làm bài (phút)</string>
    <string name="timeStart">Ngày bắt đầu</string>
    <string name="timeFinish">Ngày hết hạn (nếu cần)</string>
    <string name="numQuestion">Tổng số câu</string>
    <string name="question">Câu %d:</string>
    <string name="quesOnedigit">Câu 0%d</string>
    <string name="quesTwodigit">Câu %d</string>
    <string name="datecreate">Ngày tạo: %s</string>
    <string name="dateStart">Ngày bắt đầu: %s</string>
    <string name="datefinish">Hạn chót: %s</string>
    <string name="timedone">Thời gian: %s phút</string>
    <string name="doneall">%1d/%2d</string>
    <string name="message">Thời gian làm bài là %s phút. Khi hết giờ sẽ tự động nộp bài. Bạn có làm bài luôn không?</string>
    <string name="incorrect">Sai: %d</string>
    <string name="correct">Đúng: %d</string>
    <string name="time">Thời gian: %s</string>
    <string name="classsize">Sĩ số: %d</string>
    <string name="numdone">Đã làm:</string>
    <string name="codesecure">Mật mã: %s</string>
    <string name="creator">Người tạo: %s</string>
    <string name="finished">Đã làm: %d</string>
    <string name="unfinish">Chưa làm: %d</string>
    <string name="numTask">Số bài tập: %d</string>
    <string name="highscore">Bài làm <b>TốT</b></string>
    <string name="lowscore">Bài làm <b>Chưa Tốt</b></string>
    <string name="score">Điểm: %s</string>
    <string name="checkupdate">Kiểm tra cập nhật</string>
    <string name="contact">Liên hệ</string>
    <string name="inforquequan">Đến Từ Vĩnh Tường - Vĩnh Phúc</string>
    <string name="infortruong">Học Tại Trường THPT Đội Cấn</string>
    <string name="fb">https://www.facebook.com/halinhofficial</string>
    <string name="insta">https://www.instagram.com/halinhit</string>
    <string name="gmail">linhlt2002@gmail.com</string>
    <string name="Subject">Support App</string>
</resources>
