<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#07A7A7">

        <ImageButton
            android:id="@+id/imgBtnBack"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="#FFFFFF"
            android:text="@string/contact"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            app:layout_constraintBottom_toTopOf="@id/btnLines"
            app:layout_constraintStart_toEndOf="@id/imgBtnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLines"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="#BBBBBB"
            app:layout_constraintTop_toBottomOf="@id/imgBtnBack" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/avatar"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Linh Hà"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="22sp"
            android:textColor="#06CCBC"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infortruong"
            android:gravity="center"
            android:textColor="#0A7DD6"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inforquequan"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="#1206BD"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0CB806"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="Nếu có vấn đề gì, Hãy Liên Hệ Với Tôi."/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/fbbtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/iconfb"
            android:scaleType="fitStart"
            android:background="@null" />

        <ImageButton
            android:id="@+id/instabtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/iconinstar"
            android:scaleType="fitStart"
            android:background="@null" />

        <ImageButton
            android:id="@+id/gmailbtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icongmail"
            android:background="@null"
            android:scaleType="fitCenter"/>

    </LinearLayout>
</LinearLayout>