<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnGetFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_btn_upload"
            android:drawableLeft="@drawable/ic_upload"
            android:drawablePadding="10dp"
            android:text="Tải lên tệp"
            android:textAllCaps="false"
            android:textColor="#FAFAFA"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/layoutFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/btnGetFile">

            <TextView
                android:id="@+id/txtNameFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/btnView"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textColor="#111111"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/custom_btn"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="Xem đề"
                android:textAllCaps="false"
                android:textColor="#FAFAFA" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutFile">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNameTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/nameTask"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="#111111"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTimeDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/timeTask"
                    android:inputType="number"
                    android:textColor="#111111"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/edtTimeStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/timeStart"
                android:inputType="datetime" />

            <EditText
                android:id="@+id/edtTimeFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/timeFinish"
                android:inputType="datetime" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEdtQues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNumQues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/numQuestion"
                    android:inputType="number"
                    android:textColor="#111111"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/sw_showAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:padding="5dp"
                android:switchPadding="10dp"
                android:text="Hiển thị đáp án"
                android:textColor="#292929"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/sw_importAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:padding="5dp"
                android:switchPadding="10dp"
                android:text="Dán đáp án"
                android:textColor="#292929"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyEdtImAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:counterEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtImAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="Nhập hoặc dán đáp án tại đây"
                    android:inputType="text"
                    android:textColor="#111111"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button_login"
            android:text="Tiếp tục"
            android:textAllCaps="false"
            android:textColor="#FAFAFA"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutInformation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>